--- a/next-academy.html
+++ b/next-academy.html
@@ -1,8 +1,12 @@
 <html>
 
 <head>
-  <img src="logo.png"></img>
+  <b>Welcome to Next Academy</b>
 </head>
-<br> working on site, don't judge
-
+<div class="dropdown">
+   <button class="dropbtn">Dropdown</button>
+  <div class="dropdown-content">
+    <a herf="#">Lessons</a>
+  </div>
+  </div>
 </html>
